--- a/package.json
+++ b/package.json
@@ -49,6 +49,7 @@
     "react-select": "^3.1.0",
     "react-spring": "^8.0.27",
     "react-switch": "^5.0.1",
+    "serve": "^12.0.0",
     "styled-components": "^5.1.1",
     "typescript": "~3.7.2",
     "uuidv4": "^6.2.3",
