chore: Adding new role 'nanotech_representatives'

--- a/.eslintrc
+++ b/.eslintrc
@@ -32,6 +32,7 @@
   ],
   "rules": {
     "prettier/prettier": "error",
+    "linebreak-style": 0,
     "dot-notation": "off",
     "indent": "off",
     "camelcase": "off",
