--- a/package.json
+++ b/package.json
@@ -12,8 +12,8 @@
   },
   "dependencies": {
     "@chakra-ui/core": "^0.8.0",
-    "@chakra-ui/css-reset": "^1.0.0",
-    "@chakra-ui/react": "^1.0.0",
+    "@chakra-ui/css-reset": "^2.0.7",
+    "@chakra-ui/react": "^2.3.4",
     "@emotion/babel-preset-css-prop": "^10.0.27",
     "@emotion/core": "^10.0.35",
     "@emotion/react": "^11",
@@ -51,6 +51,7 @@
     "react-switch": "^5.0.1",
     "serve": "^12.0.0",
     "styled-components": "^5.3.1",
+    "swiper": "^8.4.2",
     "typescript": "~3.7.2",
     "uuidv4": "^6.2.3",
     "yup": "^0.29.3"
