--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "author": "Matheus Fraga <@Mlfraga>",
   "private": true,
   "scripts": {
-    "start": "react-scripts start",
+    "start": "react-scripts --openssl-legacy-provider start",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "lint:fix": "eslint --fix ./ --ext ts,tsx",
